# 3-phase-meter-dashboard

./: README.md
client/: .env.example  index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/components/: AppLayout.jsx  InsightMiniChart.jsx  ProtectedRoute.jsx
client/src/context/: AlertsContext.jsx  AuthContext.jsx  DashboardContext.jsx  DeviceContext.jsx  HistoricalContext.jsx  InsightsContext.jsx  LiveContext.jsx
client/src/pages/: AdminPage.jsx  AlertsPage.jsx  DashboardPage.jsx  HistoricalPage.jsx  InsightsPage.jsx  LivePage.jsx  LoginPage.jsx
client/src/services/: api.js
microservice/: .gitignore  bulk_publish.py  main.py  meter_simulator.py  mian.py  pyproject.toml  requirements.txt
microservice/api/: index.py
server/: .env.example  .gitignore  README.md  app.js  package-lock.json  package.json  test-api.js  users.config.json
server/common/: logger.js  rangeQuery.js  response.js
server/config/: hivemq.js  index.js  socket.js
server/controller/: adminController.js  alertController.js  authController.js  dashboardController.js  dataController.js  deviceController.js  insightController.js
server/data/: sample-readings.csv
server/middlewares/: auth.js  errorHandler.js  requestLogger.js
server/routes/: adminRoutes.js  alertRoutes.js  authRoutes.js  dashboardRoutes.js  dataRoutes.js  deviceRoutes.js  insightRoutes.js
server/scripts/: generateCsv.js  generateUsers.js
server/services/: alertService.js  csvDataService.js  dataStore.js  insightService.js  liveDataService.js  tokenService.js  userService.js
(+3 files in other folders)
